cmake_minimum_required(VERSION 3.10)
project(TP2-I-2018)

set(CMAKE_CXX_STANDARD 11)


add_executable(TP2-I-2018 main.cpp GrafoNODirigido.h GrafoNODirigido.cpp GrafoMatriz.h GrafoMatriz.cpp Diccionario.cpp Diccionario.h Relacion1a1.h GrafoDirigListAdy.cpp GrafoDirigListAdy.h Algoritmos.cpp Algoritmos.h ListaIndexadaLSE.h ListaIndexadaLSE.cpp)


